mule-user-guide/v/3.8/salesforce-composite-connector.adoc
=  Salesforce复合连接器
:keywords: salesforce, composite, connector, user guide, sfdc

Salesforce Composite的Anypoint Connector为您提供了一种与Salesforce Composite API link:https://developer.salesforce.com/docs/atlas.en-us.api_rest.meta/api_rest/resources_composite.htm[Salesforce复合API]进行集成的方法。该连接器公开了便捷的方法来准备子请求，并在一个批处理中执行它们并解析结果。它还提供了通过与批处理操作分开的操作创建SObject树的可能性，称为"createSobjectTree"。它提供 link:https://docs.mulesoft.com/mule-user-guide/v/3.6/datasense[DataSense]准备子请求和分析它们执行的响应以及创建SObject树。

阅读本用户指南以了解如何使用连接器设置和配置基本集成流程。仔细阅读 http://mulesoft.github.io/mule-salesforce-composite-connector/[技术参考]，了解连接器操作如何与Salesforce Composite API调用配合使用。您还会在这里找到*demo applications*来说明如何使用连接器操作。

*Release Notes*： link:/release-notes/salesforce-composite-connector-release-notes[Salesforce复合连接器发行说明]。

== 先决条件

本文假设您熟悉Mule， link:/mule-user-guide/v/3.7/anypoint-connectors[Anypoint连接器]和 link:/anypoint-studio/v/6/index[Anypoint Studio Essentials]为了提高您对Studio的熟悉度，请考虑完成一个或多个 link:/anypoint-studio/v/6/basic-studio-tutorial[Anypoint Studio教程]。此外，本页假定您对 link:/mule-user-guide/v/3.7/elements-in-a-mule-flow[骡流]和 link:/mule-user-guide/v/3.7/global-elements[骡全球元素]有基本的了解。

== 要求

要使用Salesforce复合连接器，您需要：

* 您必须拥有常规的Salesforce帐户。有关更多信息，请参阅 link:https://developer.salesforce.com/docs/atlas.en-us.api_rest.meta/api_rest/[Salesforce Rest API]和 link:https://developer.salesforce.com/docs/atlas.en-us.api_rest.meta/api_rest/using_composite_resources.htm[Salesforce复合API开发人员指南]。
* 要在您的计算机上下载并安装 link:http://www.mulesoft.org/download-mule-esb-community-edition[Anypoint Studio社区版]。

== 兼容性

[%header%autowidth.spread]
|===
|应用/服务 |版本
| Mule运行时 |  3.5.0及更高版本
| Salesforce Rest API  |  36.0
|===

== 安装和配置

=== 安装

您可以使用 link:/anypoint-exchange[从Anypoint Exchange安装连接器]中的说明在Anypoint Studio中安装连接器。

=== 在新项目中使用连接器

要在Mule应用程序项目中使用Salesforce Composite连接器，请执行以下操作：

. 在Studio中，选择*File*> *New*> *Mule Project*。
+
image:new_project.png[创建新项目]
+
. 为您的新项目输入一个名称，并将其余选项保留为默认值。
+
image:new_project_dialog.png[创建新的项目对话框]
+
. 如果您打算使用Git，请为Studio项目选择*Create a default .gitignore file*，然后单击*Next*以使用默认的.gitignore设置。
. 点击*Finish*创建项目。

=== 配置全局元素

要在您的Mule应用程序中使用Salesforce Composite连接器，您必须配置一个全局Salesforce Composite元素，该元素可供应用程序中的所有Salesforce Composite连接器使用（请阅读有关 link:/mule-user-guide/v/3.7/global-elements[全球元素]的更多信息）。

=== 连接器身份验证

要访问Salesforce Composite实例中的数据，连接器使用"OAuth 2.0 Username-Password"流程。有关如何使用Salesforce的此方法获取访问令牌的更多信息，请参阅：https://help.salesforce.com/HTViewHelpDoc?id=remoteaccess_oauth_username_password_flow.htm&language=en_US[OAuth 2.0用户名 - 密码]。以下是使用它配置全局元素的步骤：

. 点击画布底部的*Global Elements*标签。
. 在Global Mule配置元素屏幕上，点击*Create*。
. 在选择全局类型向导中，按"salesforce composite"过滤，展开*Connector Configuration*，然后选择"Salesforce Composite: Configuration"。
+
image:create_global_element.png[创建全局元素]
+
. 点击*Ok*
. 输入全局元素属性：
+
image:basic_authentication_config.png[基本认证配置]
+
注意：在上图中，占位符值是指放置在项目的*src*文件夹中的配置文件（了解如何 link:/mule-user-guide/v/3.7/configuring-properties[配置属性]）。您可以将您的凭证硬编码到全局配置属性中，也可以引用包含这些值的配置文件。为了更简单的维护和更好的项目重用性，Mule建议您使用配置文件。如果需要将这些值保存在单独的文件中，则需要将其部署到不同的环境，例如生产，开发和质量保证（访问凭证不同）。有关如何管理此操作的说明，请参阅 link:/mule-user-guide/v/3.7/deploying-to-multiple-environments[部署到多个环境]。
+
[%header,cols="1,1a",frame=topbot]
|===
| {字段{1}}说明
|名称 | 为此连接器输入一个名称，以便稍后参考。
|用户名| 输入Salesforce用户名。
|密码| 输入相应的密码。
|使用者密钥| 从Salesforce输入连接应用程序的使用者密钥。
|消费者秘密| 从Salesforce为您连接的应用输入消费者秘密。
|安全令牌| 输入用户名的安全令牌。
|令牌端点 | 输入提供令牌的服务器的URL。有关详情，请参阅： link:https://developer.salesforce.com/docs/atlas.en-us.api_rest.meta/api_rest/intro_understanding_oauth_endpoints.htm[了解OAuth端点]。
|===

=== 使用连接器

您可以使用Salesforce Composite连接器作为流中的出站连接器，以便通过利用属于Salesforce REST Api一部分的组合资源将数据推送到Salesforce系统。要将其用作出站连接器，只需将该连接器放置在入站端点之后的任意位置。

=== 用例

此连接器的目的是让您利用Salesforce REST API的复合资源。它提供支持 link:https://docs.mulesoft.com/mule-user-guide/v/3.6/datasense[DataSense]的操作，为您提供最好的用户体验，以准备将在一批中执行的子请求以及解析来自Salesforce的响应。
对于复合支持的每个资​​源，您都有一项操作用于准备Salesforce Composite API预期的名为"Pre <name_of_resource>"的子请求，目的是为每个资源创建子请求和一个操作目的是提供一种简单的方法来解析其相关子请求"Post <name_of_resource>"的响应。
您还有一项操作，负责向Salesforce发送子请求列表并返回响应列表。

此连接器可用的另一个操作是"createSobjectTree"，它创建一个或多个具有指定类型（ link:https://developer.salesforce.com/docs/atlas.en-us.api_rest.meta/api_rest/resources_composite_sobject_tree.htm[Salesforce SObject树文档]）的根记录的sObject树。

==== 将Salesforce复合连接器添加到流程中

. 在Anypoint Studio中创建一个新的Mule项目。
. 将Salesforce Composite连接器拖到画布上，然后选择它打开属性编辑器。
. 配置连接器的参数：

+

image:operation_config.png[Salesforce复合操作配置]

+

[%header,frame=topbot]
|===
| {字段{1}}说明
|显示名称 | 在应用程序中输入连接器的唯一标签。
|连接器配置 | 从您在<<Configuring the Salesforce Composite Global Element>>部分下创建的drop-down中选择一个全局元素。
|操作 | 选择连接器执行的操作。
|===
+
. 单击画布上的空白处并保存您的配置。

== 示例用例

=== 示例使用案例1

在这个用例中，描述了如何使用连接器来准备四个子请求，在一个批处理中执行它们并解析响应。我们要执行的子请求分别是更新帐户，更新联系人，检索更新的帐户和联系人。
我们需要用来创建子请求的输入数据将从文件中读取，并且执行结果也将被记录到文件中。
让我们开始工作。

点击*File > New > Mule Project*创建一个新的Mule项目。在新项目对话框中，您只需输入项目名称即可。点击*Finish*。

image:new_project_dialog.png[新建项目对话框]

现在让我们创建流程。浏览项目结构并双击*src/main/app/project-name.xml*并按照以下步骤操作：

. 转到调色板并搜索"File"。
. 将"File"元素拖放到画布上。这个元素将读取我们放置创建子请求所需输入数据的文件。
+
image:file_element.png[文件元素]
+
. 双击文件元素并设置其属性，如下所示：
..  "Path"到"src/main/resources/input"
..  "Move to Directory"到"src/main/resources/processed"
+
image:input_file_config.png[输入文件配置]
+
. 转到调色板，搜索"Splitter"并将其拖放到"File"后的画布上。该元素用于将输入数据分割成各个项目，作为负责准备子请求的操作的输入项目。我们将以xml格式提供输入数据，因此将使用 link:https://docs.mulesoft.com/mule-user-guide/v/3.7/xpath[xpath3]作为拆分表达式。
+
image:input_splitter.png[输入分配器]
+
. 双击"Splitter"并设置其属性，如下所示：
..  "Enable Correlation"选择"ALWAYS"。
..  "Expression"到"#[xpath3('/items/item', payload, 'NODESET')]"
+
image:input_splitter_config.png[输入分配器配置]
+
. 转到调色板，搜索"DOM to XML"并将其拖放到"Splitter"之后的流程中。我们需要这个元素，因为splitter的结果是一个DOM对象，而下一个组件对xml格式的字符串进行操作。
. 转到调色板，搜索"Choice"并将其拖放到"DOM to XML"之后的流程中。该元素将根据其操作将输入数据项路由到其相关的"Composite"元素。
+
image:input_choice.png[输入选择]
+
. 转到调色板，搜索"Logger"并将其拖动到"Choice"的"Default"部分。
. 双击记录器并设置其属性，如下所示：
..  "Message"到"Unable to route item based on operation."
+
image:input_choice_default_logger.png[选择默认分支记录器]
+
. 转到调色板，搜索"Transform Message"，然后将其中的四个拖放到另一个的下方。
. 转到调色板，搜索"Salesforce Composite"并在上一步中的每个"Transform Message"之后拖动一个。
. 右键单击第"Transform Message"个，并将其重命名为"Update Account Transformer"
. 右键单击第"Salesforce Composite"个，并将其重命名为"Pre-Update Account"
. 右键单击第二个"Transform Message"并将其重命名为"Update Contact Transformer"
. 右键单击第二个"Salesforce Composite"并将其重命名为"Pre-Update Contact"
. 右键单击第三个"Transform Message"并将其重命名为"Retrieve Account Transformer"
. 右键单击第三个"Salesforce Composite"并将其重命名为"Pre-Retrieve Account"
. 右键单击第四个"Transform Message"并将其重命名为"Retrieve Contact Transformer"
. 右键单击第四个"Salesforce Composite"并将其重命名为"Pre-Retrieve Contact"
+
image:input_choice_with_branches.png[分支输入选择]
+
. 双击"Choice"并设置其属性，如下所示：
+
image:input_choice_config.png[输入选择配置]
+
. 从画布底部切换到"Global Elements"选项卡，然后单击"Create"。您将为"Salesforce Conposite"创建全局配置。
. 在搜索栏中输入"Salesforce Composite"，然后双击"Connector Configuration"下的"Salesforce Composite: Configuration"。
+
image:composite_global_config_search.png[Salesforce综合全局配置搜索]
+
. 按照<<Configuring the Salesforce Composite Global Element>>中的说明填写所有字段
+
image:salesforce_composite_config.png[Salesforce复合配置]
+
. 双击"Pre-Update Account"并设置其属性，如下所示。这将按照Salesforce希望更新帐户的格式创建子请求。
.. 从"Connector configuration"下拉菜单中选择"Salesforce_Composite__Configuration"或配置全局元素时设置的名称。
.. 从"Operation"下拉选择"Pre update"
.. 从"Type"下拉选择"Account"
..  "Sub Request Correlation Id"到"updateAccountSubRequest"。这个ID将被用于将响应与其解析器相关联。
+
image:pre_update_account_config.png[更新前的帐户]
+
. 双击"Pre-Update Contact"并设置其属性，如下所示。这将按照Salesforce希望的格式创建子请求以更新联系人。
.. 从"Connector configuration"下拉菜单中选择"Salesforce_Composite__Configuration"或配置全局元素时设置的名称。
.. 从"Operation"下拉选择"Pre update"
.. 从"Type"下拉选择"Contact"
..  "Sub Request Correlation Id"到"updateContactSubRequest"。这个ID将被用于将响应与其解析器相关联。
+
image:pre_update_contact_config.png[预更新联系人]
+
. 双击"Pre-Retrieve Account"并设置其属性，如下所示。这将按照Salesforce预期的格式创建子请求以检索帐户。
.. 从"Connector configuration"下拉菜单中选择"Salesforce_Composite__Configuration"或配置全局元素时设置的名称。
.. 从"Operation"下拉选择"Pre retrieve"
..  "Sub Request Correlation Id"到"retrieveAccountSubRequest"。这个ID将被用于将响应与其解析器相关联。
+
image:pre_retrieve_account_config.png[预先检索帐户]
+
. 双击"Pre-Retrieve Contact"并设置其属性，如下所示。这将按照Salesforce预期的格式创建子请求以检索联系人。
.. 从"Connector configuration"下拉菜单中选择"Salesforce_Composite__Configuration"或配置全局元素时设置的名称。
.. 从"Operation"下拉选择"Pre retrieve"
..  "Sub Request Correlation Id"到"retrieveContactSubRequest"。这个ID将被用于将响应与其解析器相关联。
+
image:pre_retrieve_contact_config.png[预先取回联系人]
+
. 双击"Update Account Transformer"并设置其属性，如下所示。这将通过准备帐户更新子请求的操作将输入数据映射到预期数据。
+
image:update_account_transformer_config.png[更新帐户转换器]
+
. 双击"Update Contact Transformer"并设置其属性，如下所示。这将通过准备联系人更新子请求的操作将输入数据映射到预期数据。
+
image:update_contact_transformer_config.png[更新联系变换器]
+
. 双击"Retrieve Account Transformer"并设置其属性，如下所示。这将通过准备帐户检索子请求的操作将输入数据映射到预期数据。
+
image:retrieve_account_transformer_config.png[检索帐户转换器]
+
. 双击"Retrieve Contact Transformer"并设置其属性，如下所示。这将通过准备联系人检索子请求的操作将输入数据映射到预期数据。
+
image:retrieve_contact_transformer_config.png[检索联系变换器]
+
. 转到调色板，搜索"Collection Aggregator"并将其拖放到"Choice"之后。这是汇总集合中所有格式化的子请求。
. 转到调色板，搜索"VM"并将其拖放到"Collection Aggregator"之后。它用于将子请求的集合传递给下一个流。
+
image:preparation_full_flow.png[子请求准备全流]
+
. 双击"Collection Aggregator"并设置其属性，如下所示：
+
image:pre_collection_aggregator_config.png[子请求集合聚合器配置]
+
. 双击"VM"并设置其属性，如下所示：
+
image:pre_vm_config.png[子请求VM配置]
+
. 转到调色板，搜索"VM"并将其拖放到新流程中。这用于从宝贵的流程中获取子请求的集合。
+
image:pre_flow_post_flow.png[前后流程]
+
. 双击之前创建的"VM"并设置其属性，如下所示：
+
image:post_vm_config.png[发布VM配置]
+
. 转到调色板，搜索"Salesforce Composite"并将其拖放到"VM"之后。它用于将子请求集合发送到Salesforce服务器并检索结果集合。
. 转到调色板，搜索"Collection splitter"并将其拖放到"Salesforce Composite"之后。它用于为每个结果拆分单个消息中的结果集合。
+
image:post_collection_splitter.png[邮政收集分配器]
+
. 双击"Salesforce Composite"并设置其属性，如下所示：
+
image:execute_batch_config.png[执行批处理配置]
+
. 双击"Collection Splitter"并设置其属性，如下所示：
+
image:post_collection_splitter_config.png[Post Collection Splitter配置]
+
. 转到调色板，搜索"First Successful"并将其拖放到"Collection Splitter"之后。它用于将结果消息路由到其中的每个连接器，直到消息被其中一个成功处理。
. 转到调色板，搜索"Salesforce Composite"并将其中的四个拖放到"First Successful"中。每个连接器都用于处理一个结果消息。
. 双击第一个"Salesforce Composite"并设置其属性，如下所示。负责解析账号更新结果。这是根据其"Sub Request Correlation Id"决定的。
..  "Display Name"到"Post Update Account"
.. 从"Connector configuration"下拉菜单中选择"Salesforce_Composite__Configuration"或配置全局元素时设置的名称。
.. 从"Operation"下拉选择"Post update"
..  "Sub Request Correlation Id"到"updateAccountSubRequest"。此ID是您在"Pre Update Account"元素上设置的ID。
+
image:post_update_account_config.png[发布更新帐户配置]
+
. 双击第二个"Salesforce Composite"并设置其属性，如下所示。它负责解析联系人更新的结果。这是根据其"Sub Request Correlation Id"决定的。
..  "Display Name"到"Post Update Contact"
.. 从"Connector configuration"下拉菜单中选择"Salesforce_Composite__Configuration"或配置全局元素时设置的名称。
.. 从"Operation"下拉选择"Post update"
..  "Sub Request Correlation Id"到"updateContactSubRequest"。此ID是您在"Pre Update Contact"元素上设置的ID。
+
image:post_update_contact_config.png[发布更新联系人配置]
+
. 双击第三个"Salesforce Composite"并设置其属性如下。它负责解析帐户检索的结果。这是根据其"Sub Request Correlation Id"决定的。
..  "Display Name"到"Post Retrieve Account"
.. 从"Connector configuration"下拉菜单中选择"Salesforce_Composite__Configuration"或配置全局元素时设置的名称。
.. 从"Operation"下拉选择"Post retrieve"
..  "Sub Request Correlation Id"到"retrieveAccountSubRequest"。此ID是您在"Pre Retrieve Account"元素上设置的ID。
+
image:post_retrieve_account_config.png[后取回帐户配置]
+
. 双击第四个"Salesforce Composite"并设置其属性，如下所示。它负责解析联系人检索的结果。这是根据其"Sub Request Correlation Id"决定的。
..  "Display Name"到"Post Retrieve Contact"
.. 从"Connector configuration"下拉菜单中选择"Salesforce_Composite__Configuration"或配置全局元素时设置的名称。
.. 从"Operation"下拉选择"Post retrieve"
..  "Sub Request Correlation Id"到"retrieveContactSubRequest"。此ID是您在"Pre Retrieve Contact"元素上设置的ID。
+
image:post_retrieve_contact_config.png[发布检索联系人配置]
+
. 在"Post Retrieve Account"之后拖放一个"Transform Message"。它负责将帐户检索的结果映射到您需要的数据，在我们的案例中，我们将其进一步传递给它。
. 在"Post Retrieve Contact"之后拖放一个"Transform Message"。它负责将联系人检索的结果映射到您需要的数据，在我们的案例中，我们将其进一步传递给它。
+
image:first_successful_full.png[第一次成功]
+
. 右键单击第"Transform Message"个，并将其重命名为"Post Retrieve Account Transformer"
. 右键单击第二个"Transform Message"并将其重命名为"Post Retrieve Contact Transformer"
. 双击"Post Retrieve Account Transformer"并设置其属性，如下所示：
+
image:post_retrieve_account_transformer_config.png[邮政检索帐户转换器]
+
. 双击"Post Retrieve Contact Transformer"并设置其属性，如下所示：
+
image:post_retrieve_contact_transformer_config.png[后取回联系变压器]
+
. 转到调色板，搜索"Collection Aggregator"并将其拖放到"First Successful"之后。它收集所有根据用户需要格式化的结果消息。
. 转到调色板，搜索"Transform Message"并将其拖放到"Collection Aggregator"之后。它将收集的结果列表转换为json格式。
. 转到调色板，搜索"File"并将其拖放到"Transform Message"之后。它将结果json写入文件。
+
image:post_execution_full_flow.png[结果解析流程]
+
. 双击"Collection Aggregator"并设置其属性，如下所示：
+
image:post_execution_collection_aggregator_config.png[执行后集合聚合器]
+
. 双击"Transform Message"并设置其属性，如下所示：
+
image:post_execution_transformer_config.png[后执行变压器]
+
. 双击"File"并设置其属性，如下所示：
+
image:execution_dump_file_config.png[执行结果转储文件]
. 我们快完成了。流程已准备就绪，唯一剩下的就是准备输入文件并运行流程。
. 将以下名为items.xml的测试文件复制到/ src / main / resources / input中
+
[source,xml,linenums]
----
<?xml version='1.0' encoding='windows-1252'?>
<items>
  <item>
    <operation>updateAccount</operation>
    <sObject>
      <id><!--Account id to be updated --></id>
      <Phone>123123</Phone>
    </sObject>
  </item>
  <item>
    <operation>updateContact</operation>
    <sObject>
      <id><!--Contact id to be updated --></id>
      <Title>NewTitle</Title>
    </sObject>
  </item>
  <item>
    <operation>retrieveAccount</operation>
    <id><!--Account id to be retrieved --></id>
    <fields>
      <field>Id</field>
      <field>Name</field>
      <field>Phone</field>
    </fields>
    <type>Account</type>
  </item>
  <item>
    <operation>retrieveContact</operation>
    <id><!--Contact id to be retrieved --></id>
    <fields>
      <field>Id</field>
      <field>Name</field>
      <field>Title</field>
    </fields>
    <type>Contact</type>
  </item>
</items>
----


+
. 用您组织中的帐户ID替换"<!--Account id to be updated -\->"。这是应用程序要更新的帐户。
. 用您组织中的联系人ID替换"<!--Contact id to be updated -\->"。这是应用程序要更新的联系人。
. 用您组织中的帐户ID替换"<!--Account id to be retrieved -\->"。这是应用程序要检索的帐户。
. 用您组织中的联系人ID替换"<!--Contact id to be retrieved -\->"。这是应用程序要检索的联系人。
. 运行应用程序。
. 等待应用程序执行。它应该需要大约10秒。当您在控制台中看到此消息时，您知道处理已完成："Writing file to: <path_to_app>\project-name\src\main\resources\output\batch_output.json"。
. 打开/src/main/resources/batch_output.json并查看以json格式处理的结果。

=== 示例使用案例2

. 将sfdc-composite命名空间添加到mule元素，如下所示：

+

[source,xml,linenums]
----
xmlns:sfdc-composite="http://www.mulesoft.org/schema/mule/sfdc-composite"
----

. 添加由"sfdc-composite"命名空间引用的组合模式的位置：

+

[source,xml,linenums]
----
http://www.mulesoft.org/schema/mule/sfdc-composite http://www.mulesoft.org/schema/mule/sfdc-composite/current/mule-sfdc-composite.xsd
----

. 按如下方式添加数据编织名称空间：

+

[source,xml,linenums]
----
xmlns:dw="http://www.mulesoft.org/schema/mule/ee/dw"
----

. 将"dw"名称空间引用的数据组织架构的位置添加为以下值：

+

[source,xml,linenums]
----
http://www.mulesoft.org/schema/mule/ee/dw http://www.mulesoft.org/schema/mule/ee/dw/current/dw.xsd
----

. 添加上下文名称空间，如下所示：

+

[source,xml,linenums]
----
xmlns:context="http://www.springframework.org/schema/context"
----

. 将"context"名称空间引用的联系人模式的位置添加为以下值：

+

[source,xml,linenums]
----
http://www.springframework.org/schema/context http://www.springframework.org/schema/context/spring-context-current.xsd
----

. 按如下所示添加文件名称空间：

+

[source,xml,linenums]
----
xmlns:file="http://www.mulesoft.org/schema/mule/file"
----

. 将"file"名称空间引用的文件架构的位置添加为以下值：

+

[source,xml,linenums]
----
http://www.mulesoft.org/schema/mule/file http://www.mulesoft.org/schema/mule/file/current/mule-file.xsd
----

. 添加虚拟机名称空间，如下所示：

+

[source,xml,linenums]
----
xmlns:vm="http://www.mulesoft.org/schema/mule/vm"
----

. 使用以下值添加由"vm"命名空间引用的vm架构的位置：

+

[source,xml,linenums]
----
http://www.mulesoft.org/schema/mule/vm http://www.mulesoft.org/schema/mule/vm/current/mule-vm.xsd
----

. 将上下文：property-placeholder元素添加到您的项目中，然后按如下方式配置其属性：

+

[source,xml,linenums]
----
<context:property-placeholder location="mule-app.properties"/>
----

. 将sfdc-composite：config元素添加到您的项目中，然后按如下方式配置其属性：

+

[source,xml,linenums]
----
<sfdc-composite:config name="Salesforce_Composite__Configuration" username="${config.username}" password="${config.password}" consumerKey="${config.consumerKey}" consumerSecret="${config.consumerSecret}" securityToken="${config.securityToken}" tokenEndpoint="${config.tokenEndpoint}" doc:name="Salesforce Composite: Configuration"/>
----

. 向您的项目添加一个空流元素，如下所示：

+

[source,xml,linenums]
----
<flow name="project-nameFlow">
</flow>
----

. 在流程元素中添加一个"file:inbound-endpoint"元素，如下所示：

+

[source,xml,linenums]
----
<file:inbound-endpoint path="src/main/resources/input" moveToDirectory="src/main/resources/processed" responseTimeout="10000" doc:name="File"/>
----

. 在流程元素中，在文件之后添加一个"splitter"元素，如下所示：

+

[source,xml,linenums]
----
<splitter enableCorrelation="ALWAYS" expression="#[xpath3('/items/item', payload, 'NODESET')]" doc:name="Splitter"/>
----

. 在流程元素中，在分离器之后添加一个"mulexml:dom-to-xml-transformer"元素，如下所示：

+

[source,xml,linenums]
----
<mulexml:dom-to-xml-transformer doc:name="DOM to XML"/>
----

. 在流元素中，在dom-to-xml变换器之后添加一个空的"choice"元素，如下所示：

+

[source,xml,linenums]
----
<choice doc:name="Choice">
    <otherwise>
    </otherwise>
</choice>
----

. 在选择元素的其他标记内添加"logger"，如下所示：

+

[source,xml,linenums]
----
<logger message="Unable to route item based on operation." level="INFO" doc:name="Logger"/>
----

. 在choice元素中添加一个空的"when"，如下所示：

+

[source,xml,linenums]
----
<when expression="#[xpath3('/item/operation') == 'updateAccount']">
</when>
----

. 在"when"标签内添加一个"dw:transform-message"，如下所示：

+

[source,xml,linenums]
----
<dw:transform-message doc:name="Update Account Transformer">
    <dw:set-payload>
        <![CDATA[
        %dw 1.0
        %output application/java
        ---
        {
            Phone: payload.item.sObject.Phone,
            Id: payload.item.sObject.id
        }
        ]]>
    </dw:set-payload>
</dw:transform-message>
----

. 在"when"标签内，在"dw:transform-message"之后添加"sfdc-composite:pre-update"，如下所示：

+

[source,xml,linenums]
----
<sfdc-composite:pre-update config-ref="Salesforce_Composite__Configuration" subRequestCorrelationId="updateAccountSubRequest" type="Account" doc:name="Pre-Update Account"/>
----

. 在choice元素中添加另一个空的"when"，如下所示：

+

[source,xml,linenums]
----
<when expression="#[xpath3('/item/operation') == 'updateContact']">
</when>
----

. 在"when"标签内添加一个"dw:transform-message"，如下所示：

+

[source,xml,linenums]
----
<dw:transform-message doc:name="Update Contact Transformer">
    <dw:set-payload>
    <![CDATA[
    %dw 1.0
    %output application/java
    ---
    {
        Id: payload.item.sObject.id,
        Title: payload.item.sObject.Title
    }
    ]]>
    </dw:set-payload>
</dw:transform-message>
----

. 在"when"标签内，在"dw:transform-message"之后添加"sfdc-composite:pre-update"，如下所示：

+

[source,xml,linenums]
----
<sfdc-composite:pre-update config-ref="Salesforce_Composite__Configuration" subRequestCorrelationId="updateContactSubRequest" type="Contact" doc:name="Pre-Update Contact"/>
----

. 在choice元素中添加另一个空的"when"，如下所示：

+

[source,xml,linenums]
----
<when expression="#[xpath3('/item/operation') == 'retrieveAccount']">
</when>
----

. 在"when"标签内添加一个"dw:transform-message"，如下所示：

+

[source,xml,linenums]
----
<dw:transform-message doc:name="Retrieve Account Transformer">
    <dw:set-payload>
        <![CDATA[%dw 1.0
        %output application/java
        ---
        {
            Id: payload.item.id,
            Fields : payload.item.fields.*field filter ($ != null and $ != ''),
            Type: payload.item.type
        }
        ]]>
    </dw:set-payload>
</dw:transform-message>
----

. 在"when"标签内，在"dw:transform-message"之后添加"sfdc-composite:pre-retrieve"，如下所示：

+

[source,xml,linenums]
----
<sfdc-composite:pre-retrieve config-ref="Salesforce_Composite__Configuration" doc:name="Pre-Retrieve Account" subRequestCorrelationId="retrieveAccountSubRequest"/>
----

. 在choice元素中添加另一个空的"when"，如下所示：

+

[source,xml,linenums]
----
<when expression="#[xpath3('/item/operation') == 'retrieveContact']">
</when>
----

. 在"when"标签内添加一个"dw:transform-message"，如下所示：

+

[source,xml,linenums]
----
<dw:transform-message doc:name="Retrieve Contact Transformer">
    <dw:set-payload>
        <![CDATA[%dw 1.0
        %output application/java
        ---
        {
            Id: payload.item.id,
            Fields : payload.item.fields.*field filter ($ != null and $ != ''),
            Type: payload.item.type
        }
        ]]>
    </dw:set-payload>
</dw:transform-message>
----

. 在"when"标签内，在"dw:transform-message"之后添加"sfdc-composite:pre-retrieve"，如下所示：

+

[source,xml,linenums]
----
<sfdc-composite:pre-retrieve config-ref="Salesforce_Composite__Configuration" doc:name="Pre-Retrieve Contact" subRequestCorrelationId="retrieveContactSubRequest"/>
----

. 在流程元素中，在"choice"之后添加"collection-aggregator"元素，如下所示：

+

[source,xml,linenums]
----
<collection-aggregator timeout="10000" failOnTimeout="true" doc:name="Collection Aggregator"/>
----

. 在流程元素中，在"collection-aggregator"之后添加"vm:outbound-endpoint"元素，如下所示：

+

[source,xml,linenums]
----
<vm:outbound-endpoint exchange-pattern="one-way" path="/toBeExecuted" doc:name="VM"/>
----

. 如下添加另一个空流元素到您的项目中：

+

[source,xml,linenums]
----
<flow name="project-nameFlow1">
</flow>
----

. 在流程元素中添加一个"vm:inbound-endpoint"元素，如下所示：

+

[source,xml,linenums]
----
<vm:inbound-endpoint exchange-pattern="one-way" path="/toBeExecuted" doc:name="VM"/>
----

. 在流程元素中，在"vm:inbound-endpoint"之后添加"sfdc-composite:execute-composite-batch"元素，如下所示：

+

[source,xml,linenums]
----
<sfdc-composite:execute-composite-batch config-ref="Salesforce_Composite__Configuration" doc:name="Execute Sub-Requests"/>
----

. 在流程元素中，在"sfdc-composite:execute-composite-batch"之后添加"collection-splitter"元素，如下所示：

+

[source,xml,linenums]
----
<collection-splitter enableCorrelation="ALWAYS" doc:name="Collection Splitter"/>
----

. 在流程元素中，在"collection-splitter"之后添加一个空的"first-successful"元素，如下所示：

+

[source,xml,linenums]
----
<first-successful doc:name="First Successful">
</first-successful>
----

. 在"first-successful"元素内添加一个"sfdc-composite:post-update"元素，如下所示：

+

[source,xml,linenums]
----
<sfdc-composite:post-update config-ref="Salesforce_Composite__Configuration" subRequestCorrelationId="updateAccountSubRequest" doc:name="Post Update Account"/>
----

. 在"first-successful"元素内添加一个"sfdc-composite:post-update"元素，如下所示：

+

[source,xml,linenums]
----
<sfdc-composite:post-update config-ref="Salesforce_Composite__Configuration" subRequestCorrelationId="updateContactSubRequest" doc:name="Post Update Contact"/>
----

. 在"first-successful"元素内添加一个空的"processor-chain"元素，如下所示：

+

[source,xml,linenums]
----
<processor-chain>
</processor-chain>
----

. 在"processor-chain"元素内添加一个"sfdc-composite:post-retrieve"元素，如下所示：

+

[source,xml,linenums]
----
<sfdc-composite:post-retrieve config-ref="Salesforce_Composite__Configuration" subRequestCorrelationId="retrieveAccountSubRequest" type="Account" doc:name="Salesforce Composite"/>
----

. 在"processor-chain"元素内添加一个"dw:transform-message"元素，如下所示：

+

[source,xml,linenums]
----
<dw:transform-message doc:name="Post Retrieve Account Transformer">
    <dw:set-payload>
    <![CDATA[
    %dw 1.0
    %output application/java
    ---
    payload
    ]]>
    </dw:set-payload>
</dw:transform-message>
----

. 在"first-successful"元素内添加另一个空的"processor-chain"元素，如下所示：

+

[source,xml,linenums]
----
<processor-chain>
</processor-chain>
----

. 在"processor-chain"元素内添加一个"sfdc-composite:post-retrieve"元素，如下所示：

+

[source,xml,linenums]
----
<sfdc-composite:post-retrieve config-ref="Salesforce_Composite__Configuration" subRequestCorrelationId="retrieveContactSubRequest" type="Contact" doc:name="Salesforce Composite"/>
----

. 在"processor-chain"元素内添加一个"dw:transform-message"元素，如下所示：

+

[source,xml,linenums]
----
<dw:transform-message doc:name="Post Retrieve Contact Transformer">
    <dw:set-payload>
    <![CDATA[
    %dw 1.0
    %output application/java
    ---
    payload
    ]]>
    </dw:set-payload>
</dw:transform-message>
----

. 在流程元素中，在"first-successful"之后添加"collection-aggregator"元素，如下所示：

+

[source,xml,linenums]
----
<collection-aggregator timeout="10000" failOnTimeout="true" doc:name="Collection Aggregator"/>
----

. 在流程元素中，在"collection-aggregator"之后添加"dw:transform-message"元素，如下所示：

+

[source,xml,linenums]
----
<dw:transform-message doc:name="Transform Message">
    <dw:set-payload>
        <![CDATA[
        %dw 1.0
        %output application/json
        ---
        payload
        ]]>
    </dw:set-payload>
</dw:transform-message>
----

. 在流程元素中，在"dw:transform-message"之后添加"file:outbound-endpoint"元素，如下所示：

+

[source,xml,linenums]
----
<file:outbound-endpoint path="src/main/resources/output" outputPattern="batch_output.json" responseTimeout="10000" doc:name="File"/>
----

. 最后，xml文件应该如下所示：

+

[source,xml,linenums]
----
<?xml version="1.0" encoding="UTF-8"?>

<mule xmlns:vm="http://www.mulesoft.org/schema/mule/vm"
	xmlns:context="http://www.springframework.org/schema/context"
	xmlns:file="http://www.mulesoft.org/schema/mule/file"
	xmlns:dw="http://www.mulesoft.org/schema/mule/ee/dw"
	xmlns:mulexml="http://www.mulesoft.org/schema/mule/xml"
	xmlns:sfdc-composite="http://www.mulesoft.org/schema/mule/sfdc-composite"
	xmlns:tracking="http://www.mulesoft.org/schema/mule/ee/tracking"
	xmlns="http://www.mulesoft.org/schema/mule/core"
	xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
	xmlns:spring="http://www.springframework.org/schema/beans"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://www.springframework.org/schema/beans
	http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/file http://www.mulesoft.org/schema/mule/file/current/mule-file.xsd
http://www.mulesoft.org/schema/mule/xml http://www.mulesoft.org/schema/mule/xml/current/mule-xml.xsd
http://www.mulesoft.org/schema/mule/ee/dw http://www.mulesoft.org/schema/mule/ee/dw/current/dw.xsd
http://www.mulesoft.org/schema/mule/sfdc-composite http://www.mulesoft.org/schema/mule/sfdc-composite/current/mule-sfdc-composite.xsd
http://www.mulesoft.org/schema/mule/ee/tracking http://www.mulesoft.org/schema/mule/ee/tracking/current/mule-tracking-ee.xsd
http://www.springframework.org/schema/context http://www.springframework.org/schema/context/spring-context-current.xsd
http://www.mulesoft.org/schema/mule/vm http://www.mulesoft.org/schema/mule/vm/current/mule-vm.xsd">
    <sfdc-composite:config name="Salesforce_Composite__Configuration" username="${config.username}" password="${config.password}" consumerKey="${config.consumerKey}" consumerSecret="${config.consumerSecret}" securityToken="${config.securityToken}" tokenEndpoint="${config.tokenEndpoint}" doc:name="Salesforce Composite: Configuration"/>
    <context:property-placeholder location="mule-app.properties"/>
    <flow name="project-nameFlow">
        <file:inbound-endpoint path="src/main/resources/input" moveToDirectory="src/main/resources/processed" responseTimeout="10000" doc:name="File"/>
        <splitter enableCorrelation="ALWAYS" expression="#[xpath3('/items/item', payload, 'NODESET')]" doc:name="Splitter"/>
        <mulexml:dom-to-xml-transformer doc:name="DOM to XML"/>
        <choice doc:name="Choice">
            <when expression="#[xpath3('/item/operation') == 'updateAccount']">
                <dw:transform-message doc:name="Update Account Transformer">
                    <dw:set-payload><![CDATA[%dw 1.0
%output application/java
---
{
	Phone: payload.item.sObject.Phone,
	Id: payload.item.sObject.id
}]]></dw:set-payload>
                </dw:transform-message>
                <sfdc-composite:pre-update config-ref="Salesforce_Composite__Configuration" subRequestCorrelationId="updateAccountSubRequest" type="Account" doc:name="Pre-Update Account"/>
            </when>
            <when expression="#[xpath3('/item/operation') == 'updateContact']">
                <dw:transform-message doc:name="Update Contact Transformer">
                    <dw:set-payload><![CDATA[%dw 1.0
%output application/java
---
{
	Id: payload.item.sObject.id,
	Title: payload.item.sObject.Title
}]]></dw:set-payload>
                </dw:transform-message>
                <sfdc-composite:pre-update config-ref="Salesforce_Composite__Configuration" subRequestCorrelationId="updateContactSubRequest" type="Contact" doc:name="Pre-Update Contact"/>
            </when>
            <when expression="#[xpath3('/item/operation') == 'retrieveAccount']">
                <dw:transform-message doc:name="Retrieve Account Transformer">
                    <dw:set-payload><![CDATA[%dw 1.0
%output application/java
---
{
	Id: payload.item.id,
	Fields : payload.item.fields.*field filter ($ != null and $ != ''),
	Type: payload.item.type
}]]></dw:set-payload>
                </dw:transform-message>
                <sfdc-composite:pre-retrieve config-ref="Salesforce_Composite__Configuration" doc:name="Pre-Retrieve Account" subRequestCorrelationId="retrieveAccountSubRequest"/>
            </when>
            <when expression="#[xpath3('/item/operation') == 'retrieveContact']">
                <dw:transform-message doc:name="Retrieve Contact Transformer">
                    <dw:set-payload><![CDATA[%dw 1.0
%output application/java
---
{
	Id: payload.item.id,
	Fields : payload.item.fields.*field filter ($ != null and $ != ''),
	Type: payload.item.type
}]]></dw:set-payload>
                </dw:transform-message>
                <sfdc-composite:pre-retrieve config-ref="Salesforce_Composite__Configuration" doc:name="Pre-Retrieve Contact" subRequestCorrelationId="retrieveContactSubRequest"/>
            </when>
            <otherwise>
                <logger message="Unable to route item based on operation." level="INFO" doc:name="Logger"/>
            </otherwise>
        </choice>
        <collection-aggregator timeout="10000" failOnTimeout="true" doc:name="Collection Aggregator"/>
        <vm:outbound-endpoint exchange-pattern="one-way" path="/toBeExecuted" doc:name="VM"/>
    </flow>
    <flow name="project-nameFlow1">
        <vm:inbound-endpoint exchange-pattern="one-way" path="/toBeExecuted" doc:name="VM"/>
        <sfdc-composite:execute-composite-batch config-ref="Salesforce_Composite__Configuration" doc:name="Execute Sub-Requests"/>
        <collection-splitter enableCorrelation="ALWAYS" doc:name="Collection Splitter"/>
        <first-successful doc:name="First Successful">
            <sfdc-composite:post-update config-ref="Salesforce_Composite__Configuration" subRequestCorrelationId="updateAccountSubRequest" doc:name="Post Update Account"/>
            <sfdc-composite:post-update config-ref="Salesforce_Composite__Configuration" subRequestCorrelationId="updateContactSubRequest" doc:name="Post Update Contact"/>
            <processor-chain>
                <sfdc-composite:post-retrieve config-ref="Salesforce_Composite__Configuration" subRequestCorrelationId="retrieveAccountSubRequest" type="Account" doc:name="Salesforce Composite"/>
                <dw:transform-message doc:name="Post Retrieve Account Transformer">
                    <dw:set-payload><![CDATA[%dw 1.0
%output application/java
---
payload]]></dw:set-payload>
                </dw:transform-message>
            </processor-chain>
            <processor-chain>
                <sfdc-composite:post-retrieve config-ref="Salesforce_Composite__Configuration" subRequestCorrelationId="retrieveContactSubRequest" type="Contact" doc:name="Salesforce Composite"/>
                <dw:transform-message doc:name="Post Retrieve Contact Transformer">
                    <dw:set-payload><![CDATA[%dw 1.0
%output application/java
---
payload]]></dw:set-payload>
                </dw:transform-message>
            </processor-chain>
        </first-successful>
        <collection-aggregator timeout="10000" failOnTimeout="true" doc:name="Collection Aggregator"/>
        <dw:transform-message doc:name="Transform Message">
            <dw:set-payload><![CDATA[%dw 1.0
%output application/json
---
payload]]></dw:set-payload>
        </dw:transform-message>
        <file:outbound-endpoint path="src/main/resources/output" outputPattern="batch_output.json" responseTimeout="10000" doc:name="File"/>
    </flow>
</mule>
----

=== 示例使用案例3

在这个用例中，描述了如何使用连接器来创建SObject树。

. 首先，我们需要添加一个HTTP端点并对其进行配置。
. 然后，我们需要将Salesforce Composite连接器添加到HTTP端点之后的流中。
. 下一步将像以前的用例一样为连接器创建配置（请参见示例用例1中的步骤22和23）。
. 创建配置后，我们需要通过"Test Connection..."按钮验证凭据。
. 现在我们知道凭证可以使用，并且我们可以连接到Salesforce，在这种情况下，我们将选择要执行的操作："Create sobject tree"。
. 常规部分应显示两个参数："SObject Root Type"和"SObject Tree"。
.  "SObject Root Type"参数表示将要创建的树的根的Sobject类型。选择一个值（例如"Account"）时，DataSense将根据所选的根类型引入输入和输出元数据。元数据树的深度为5级，因为这是来自 link:https://developer.salesforce.com/docs/atlas.en-us.api_rest.meta/api_rest/resources_composite_sobject_tree.htm[销售队伍]的当前限制。
.  "SObject Tree"参数将输入一个对包含要创建的Sobject树的Map的引用。有关更多详细信息，您可以查看此 link:https://developer.salesforce.com/docs/atlas.en-us.api_rest.meta/api_rest/requests_composite_sobject_tree.htm#sobject-tree-input[来自Salesforce的SObject Tree输入示例]。
. 为了创建Map包含树，可以使用Transform Message组件来将信息从任何格式映射到操作所需的格式。
. 操作的输出将包含Salesforce Id，并且对象的引用标识成功创建，并带有一个名为"hasErrors"的标志，该标志给出了整个请求的状态（"false" if整个树已成功创建，"true"如果任何对象的创建失败）。
. 流程示例如下：

+

[source,xml,linenums]
----
<?xml version="1.0" encoding="UTF-8"?>

<mule xmlns:json="http://www.mulesoft.org/schema/mule/json" xmlns:tracking="http://www.mulesoft.org/schema/mule/ee/tracking" xmlns:dw="http://www.mulesoft.org/schema/mule/ee/dw" xmlns:metadata="http://www.mulesoft.org/schema/mule/metadata" xmlns:http="http://www.mulesoft.org/schema/mule/http" xmlns:sfdc-composite="http://www.mulesoft.org/schema/mule/sfdc-composite" xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
	xmlns:spring="http://www.springframework.org/schema/beans"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
http://www.mulesoft.org/schema/mule/sfdc-composite http://www.mulesoft.org/schema/mule/sfdc-composite/current/mule-sfdc-composite.xsd
http://www.mulesoft.org/schema/mule/ee/dw http://www.mulesoft.org/schema/mule/ee/dw/current/dw.xsd
http://www.mulesoft.org/schema/mule/ee/tracking http://www.mulesoft.org/schema/mule/ee/tracking/current/mule-tracking-ee.xsd
http://www.mulesoft.org/schema/mule/json http://www.mulesoft.org/schema/mule/json/current/mule-json.xsd">
    <http:listener-config name="HTTP_Listener_Configuration" host="0.0.0.0" port="8081" doc:name="HTTP Listener Configuration"/>
    <sfdc-composite:config name="Salesforce_Composite__Configuration" username="${config.username}" password="${config.password}" consumerKey="${config.consumerKey}" consumerSecret="${config.consumerSecret}" securityToken="${config.securityToken}" tokenEndpoint="${config.tokenEndpoint}" doc:name="Salesforce Composite: Configuration"/>
    <flow name="salesforce-composite-create-sobject-trees">
        <http:listener config-ref="HTTP_Listener_Configuration" path="/create-trees" doc:name="HTTP"/>
        <dw:transform-message metadata:id="ca0b6bb9-ba1d-4f8a-9ffd-cba303bd8903" doc:name="Transform Message">
            <dw:set-payload><![CDATA[%dw 1.0
%output application/java
---
payload.sObjectTrees.records map ((record , indexOfRecord) -> {
	attributes: {
		type: record.attributes.type,
		referenceId: record.attributes.referenceId
	},
	Name: record.Name,
	Phone: record.Phone,
	Website: record.Website,
	NumberOfEmployees: record.NumberOfEmployees as :number,
	(
		ChildAccounts: {
		records: record.ChildAccounts.records map ((record01 , indexOfRecord01) -> {
			attributes: {
				type: record01.attributes.type,
				referenceId: record01.attributes.referenceId
			},
			Name: record01.Name,
			Phone: record01.Phone,
			Website: record01.Website,
			NumberOfEmployees: record01.NumberOfEmployees as :number
		})
	}
	) when (record.ChildAccounts != null),
	Contacts: {
		records: record.Contacts.records map ((record01 , indexOfRecord01) -> {
			attributes: {
				type: record01.attributes.type,
				referenceId: record01.attributes.referenceId
			},
			LastName: record01.LastName,
			Email: record01.Email,
			Title: record01.Title
		})
	}
})]]></dw:set-payload>
        </dw:transform-message>
        <logger message="The input data is: #[payload]" level="INFO" doc:name="Log the payload after it is transformed into a Map"/>

        <sfdc-composite:create-sobject-tree config-ref="Salesforce_Composite__Configuration" type="Account" doc:name="Composite Create SObject Tree"/>
        <logger message="The result is: #[payload]" level="INFO" doc:name="Log the result received from Salesforce"/>
        <dw:transform-message doc:name="Transform the response from Salesforce to JSON">
            <dw:set-payload><![CDATA[%dw 1.0
%output application/json
---
{
	"hasErrors" : payload.hasErrors,
	"results" : payload.results
}]]></dw:set-payload>
        </dw:transform-message>
    </flow>
</mule>

----
在前面的示例中，. 使用了DataWeave将从JSON中获取的树映射到操作期望的Map。
. 举一个实际的例子，您可以检查 http://mulesoft.github.io/mule-salesforce-composite-connector/[技术参考]中的"salesforce-composite-sobject-tree-demo"。

== 另请参阅

* 了解 link:/mule-user-guide/v/3.7/dataweave-tutorial[DataWeave]转换器，这是将映射分配给数据的最有效方式。
* 了解 link:/mule-user-guide/v/3.7/choice-flow-control-reference[选择]
* 了解 link:/mule-user-guide/v/3.6/splitter-flow-control-reference[分离器]
* 详细了解 link:/mule-user-guide/v/3.7/anypoint-connectors[Anypoint连接器]。
